# GTach

./: .coverage  .gitignore  .gtach-version  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0-alpha.1.md  build.sh  config.yaml  coverage.xml  deploy.sh  gtach.service  install.sh  license.md  pyproject.toml  requirements.txt  run_config_tests.py  setup.py  start-gtach-macos-tcp.sh  test.txt
.obsidian/: workspace.json
3d-case/: Fiat_Holder_MK2.stl  Fiat_Holder_MK2_Reverse_Engineering.md  GTach.FCStd  GTach_front.FCStd  GTach_holder.FCStd  GTach_plate.FCStd  GTach_rear.FCStd  GTach_rear.pwscene  GTach_stand.FCStd  GTach_stand.stl  _hexcut_report.txt  fiat_holder_bbox.txt
ai/: dashboard-alerts.md  governance.md  instructions.md  primer.md
ai/ael/: config.yaml
ai/conversations/: 20250106_Application_Provisioning_System_Design_Implementation.md  20250805_Protocol_Project Protocol Development 1.md  20250805_Protocol_Project Protocol Development 2.md  20250806_Application_Provisioning_System_Design_Implementation.md
ai/doc/: CLAUDE.md  claude-desktop-instructions.md
ai/knowledge/: behavioral-standards.schema.json  validate-behavioral-standards.py
ai/profiles/: README.md  claude-desktop.md  mlx_devstral_small_2_2512_Q8.md
ai/project_instructions/: Project Instructions.md
ai/project_knowledge/: codestral_mcp_filesystem_integration.md
ai/synopses/: Synopsis_002_Test_Refinement_Fixes.md  Synopsis_Copyright_Implementation_Analysis.md
ai/templates/: T03-issue.md  T04-prompt.md
ai/workspace/: README.md
config/: config.yaml
doc/audits/: Source_Code_Inventory_OBDII_Legacy_Analysis.md
doc/change/: Change_001_Package_Structure_Implementation.md  Change_002_Test_Failure_Resolution.md  Change_003_Advanced_Features_Implementation.md  Change_004_Archive_Performance_Optimization.md  Change_005_Provisioning_False_Success_Resolution.md  Change_006_Provisioning_Package_Naming_Enhancement.md  Change_007_Automated_Version_Management.md  Change_008_02_Enhanced_Package_Creation_Integration.md  Change_008_Enhanced_Version_State_Management.md  Change_008_Version_State_Manager_Implementation.md  Change_009_Version_State_Manager_Implementation.md  Change_010_Enhanced_Package_Creation_Integration.md  Change_011_Numeric_Version_Numbering_System.md  Change_012_Git_Release_Automation.md  Change_013_OBDII_GTach_Package_Renaming.md  Change_014_GTach_Documentation_String_Updates.md  Change_015_Provisioning_Manager_Standalone_Architecture.md  Change_016_AI_Tool_Prompt_Organization_Framework.md  README.md
doc/deployment/: GTach_Deployment_and_Release_Guide.md
docs/: Debian_boot.txt.md  GTach_cli_cmds.md  GTach_start-stop_cmds.md  HyperPixel_2"_Round.md  README.md  pi-setup.md  project_intsructions.md
releases/: RELEASE_NOTES_v0.1.0-alpha.1.md  RELEASE_NOTES_v0.1.0.101.md
src/: demonstrate_version_management.py  demonstrate_version_state_manager.py  devop.md
tests/: README.md
(+537 files in other folders)
